# arianna_method_anchor_protocol

./: .flake8  .gitignore  Procfile  README.md  agent_bridge.py  arianna_terminal.html  assistant.py  bridge.py  context_neural_processor.py  letsgo.py  pyproject.toml  requirements.in  requirements.txt  run-tests.sh  tommy.py
.github/workflows/: ci.yml  tests.yml
arianna_core/: README.md  build.sh  kernel.config
arianna_core/cmd/: assistant.py
arianna_method/: __init__.py
arianna_method/core/: __init__.py  bridge.py  letsgo.py
arianna_method/utils/: __init__.py  agent_logic.py  agent_registry.py
arianna_utils/: agent_logic.py  agent_registry.py  archive.py  context_neural_processor.py  log_utils.py  vector_engine.py  vector_store.py
cmd/: assistant.py  letsgo.py  monitor.sh  startup.py
for-codex-alpine-apk-tools/: agents.md
for-codex-alpine-conf/: Makefile  README.md  agents.md
lizzie/: .env.example  Procfile  __init__.py  lizzie.py  main.py  minimal_test.py  requirements.txt  telegram_bot.py  test_bot.py
nomonday/: __init__.py  monday.py
plugins/: __init__.py  ping.py
spirits/: __init__.py  johny.py  tony.py
tests/: test_alpine_conf.py  test_apk_tools.py  test_archive.py  test_assistant.py  test_bridge.py  test_context_processor.py  test_letsgo.py  test_log_retention.py  test_resonance.py  test_snapshots.py  test_summarize.py  test_tommy.py  test_tommy_file.py  test_tommy_logic.py  test_upload_ws.py
tommy/: __init__.py  tommy.py  tommy_logic.py
